Landing page buildout

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "grommet": "^2.7.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.0",
-    "reactjs-dropdown-component": "^1.0.6",
     "styled-components": "^4.2.0"
   },
   "scripts": {
