--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "styled-components": "^4.2.0"
   },
   "scripts": {
-    "start": "PORT=3006 react-scripts start",
+    "start": "REACT_APP_ENV=local PORT=3006 react-scripts start",
+    "start:dev": "REACT_APP_ENV=dev PORT=3006 react-scripts start",
+    "start:prod": "REACT_APP_ENV=prod PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
