--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "cypress": "./node_modules/.bin/cypress open",
+    "cypress:record": "cypress run --record --key 4c643e11-0d47-4922-bd58-19d3e5bfd0bd"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,11 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/react": "^5.0.11",
+    "@babel/core": "^7.4.4",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
-    "@babel/core": "^7.4.4",
-    "babel-loader": "^8.0.5"
+    "@storybook/react": "^5.0.11",
+    "babel-loader": "^8.0.5",
+    "cypress": "^3.3.1"
   }
 }
