Adjust environment urls and npm start commands

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "REACT_APP_ENV=local PORT=3006 react-scripts start",
-    "start:dev": "REACT_APP_ENV=dev PORT=3006 react-scripts start",
+    "start:staging": "REACT_APP_ENV=staging PORT=3006 react-scripts start",
     "start:prod": "REACT_APP_ENV=prod PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
